force-app/main/default/objects/Order_Revision__c/Order_Revision__c.object-meta.xml
<CustomObject>
    <label>Order Revision</label>
    <nameField>
        <displayFormat>OR-{000000}</displayFormat>
        <label>Order Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>