force-app/main/default/objects/Order_Revision__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Order Revisions</relationshipLabel>
    <relationshipName>Order_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>