force-app/main/default/objects/Order_Revision__c/fields/Change_Fee__c.field-meta.xml
<CustomField>
    <fullName>Change_Fee__c</fullName>
    <label>Change Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>