force-app/main/default/objects/Order_Revision__c/fields/Reason_code__c.field-meta.xml
<CustomField>
    <fullName>Reason_code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Delivery Window</fullName>
            </value>
            <value>
                <fullName>Invoice Collection Issue</fullName>
            </value>
            <value>
                <fullName>Retailer Requests Reschedule</fullName>
            </value>
            <value>
                <fullName>Requires METRC Adjustments</fullName>
            </value>
            <value>
                <fullName>Brand Requests Reschedule</fullName>
            </value>
            <value>
                <fullName>Route Compromised</fullName>
            </value>
            <value>
                <fullName>Clerical Error</fullName>
            </value>
            <value>
                <fullName>Incorrectly Entered Order</fullName>
            </value>
            <value>
                <fullName>Incorrectly Packed Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>