force-app/main/default/objects/Order_Revision__c/fields/Revision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revision_Reason__c</fullName>
    <label>Revision Reason</label>
    <type>TextArea</type>
</CustomField>