force-app/main/default/objects/Order_Revision__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Order Revisions</relationshipLabel>
    <relationshipName>Order_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>