force-app/main/default/objects/Order_Revision__c/fields/Service_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Ticket</label>
    <referenceTo>Service_Ticket__c</referenceTo>
    <relationshipLabel>Order Revisions</relationshipLabel>
    <relationshipName>Order_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>